CocacolaProject/src/objects/Milestone_Permission__c.object
<CustomObject>
    <description>プロジェクトやマイルストーンのアクセス権限管理をするオブジェクトである</description>
    <fields>
        <fullName>ProjectRole__c</fullName>
        <label>プロジェクトロール</label>
        <picklist>
            <picklistValues>
                <fullName>プロジェクトマネージャー</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>スタッフ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>インフォのみ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>プロジェクト名</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Milestone_Permission</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ名</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestone_Permission</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>プロジェクトチーム</label>
    <nameField>
        <displayFormat>Details-{00000000}</displayFormat>
        <label>チーム No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RoleNotSetting</fullName>
        <active>true</active>
        <description>ロールを設定</description>
        <errorConditionFormula>ISPICKVAL(ProjectRole__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>ロールを設定してください。</errorMessage>
    </validationRules>
</CustomObject>